--- a/ClientDashboard_GUI/src/index.html
+++ b/ClientDashboard_GUI/src/index.html
@@ -5,7 +5,7 @@
   <title>FitCast</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/svg+xml" sizes="16x16" href="assets/images/fitcast-icon.svg">
 </head>
 <body>
   <app-root></app-root>
